# Games-of-the-Games

./: .clang-format  .gitignore  CMakeLists.txt  README.md  game_functions.cpp  game_header.h  main.cpp  makefile  player.cpp  player.h
.devcontainer/: devcontainer.json
2048/: 2048_game.h  2048_main.cpp  utils.cpp
Maze/: makefile  maze_config.cpp  maze_game.h  maze_main.cpp  utils.cpp
Minesweeper/: minesweeper_game.h  minesweeper_main.cpp  utils.cpp
Player/: player.cpp  player.h
Snake/: snake_game.h  snake_main.cpp  utils.cpp
Tic-Tac-Toe/: minimax.cpp  minimax.h  tic_tac_toe_game.cpp  tic_tac_toe_game.h  tic_tac_toe_main.cpp  utils.cpp
